--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,8 @@ body {
   position: relative;
   top: 0;
   left: 0;
-  /* margin-top: -6%; */
+  height: 100vh;
+  background: url('./images/bg2.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
