--- a/src/pages/HeroPage/HeroPage.css
+++ b/src/pages/HeroPage/HeroPage.css
@@ -1,24 +1,26 @@
 h1 {
-  color: red;
+  color: orange;
   text-align: center;
   margin-bottom: 3%;
-  font-size: 5em;
+  font-size: 4em;
 }
 
 .container {
   background: rgba(255, 255, 255, 0.7);
   backdrop-filter: blur(10px);
-  padding: 5% 0;
+  padding: 2% 0;
 }
 
 .select, .TextField {
   width: 100%;
-  margin-bottom: 2%;
+  /* margin-bottom: 2%; */
 }
 
 span {
   display: block;
   text-align: right;
-  margin: 1% 0;
+  margin: 0.5% 0 1% 0;
   font-size: small;
 }
+
+
